Exploring spotify api, TODO: add alarm functionality

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ proguard/
 
 # Log Files
 *.log
+
+C:\Users\taylo_000\AndroidStudioProjects\SpotifySDK\app\src\main\java\howard\taylor\spotifysdk\Info.java
