--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,7 @@ proguard/
 *.log
 
 C:\Users\taylo_000\AndroidStudioProjects\SpotifySDK\app\src\main\java\howard\taylor\spotifysdk\Info.java
+
+Info.java
+info.java
+Info
