Added ability to play random song from chosen playlist timing down from 5 seconds.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
             android:name=".ListOfPlaylists"
             android:label="@string/title_activity_list_of_playlists" >
         </activity>
+        <activity
+            android:name=".AlarmActivity"
+            android:label="@string/title_activity_alarm" >
+        </activity>
     </application>
 
 </manifest>
