--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="howard.taylor.spotifysdk" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
@@ -28,6 +29,10 @@
         <activity
             android:name=".AlarmActivity"
             android:label="@string/title_activity_alarm" >
+            <service
+                android:name=".AlarmService"
+                android:enabled="true" />
+            <receiver android:name=".AlarmReceiver" />
         </activity>
     </application>
 
