--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.0"
 
     defaultConfig {
         applicationId "howard.taylor.spotifysdk"
         minSdkVersion 19
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
     }
@@ -21,24 +21,19 @@ android {
 
 repositories {
     mavenCentral()
+    maven { url "https://jitpack.io" }
     flatDir {
         dirs 'libs'
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.0.1'
-
-    // This library handles authentication and authorization
-    compile 'com.spotify.sdk:spotify-auth:1.0.0-beta10@aar'
-
-    // This library handles music playback
-    compile 'com.spotify.sdk:spotify-player:1.0.0-beta10@aar'
-
-    compile 'kaaes.spotify.webapi.android:spotify-web-api-android-0.1.1@aar'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.android.support:appcompat-v7:24.0.0'
+    compile(name: 'spotify-auth-1.0.0-beta12', ext: 'aar')
+    compile 'com.spotify.sdk:spotify-player:1.0.0-beta12@aar'
+    compile 'com.github.kaaes:spotify-web-api-android:0.4.1'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okhttp:okhttp:2.2.0'
-    compile 'com.android.support:design:22.2.0'
-
+    compile 'com.android.support:design:24.0.0'
 }
